--- a/src/features/programms/components/Dashboard/Dashboard.module.css
+++ b/src/features/programms/components/Dashboard/Dashboard.module.css
@@ -2,4 +2,5 @@
 	background-color: var(--clr-primary);
 	height: 100%;
 	border-radius: 15px 15px 0 0;
+	padding: 2rem 1rem 2rem 1rem;
 }
